# vibevoice-realtimeFASTAPI

./: README.md  pyproject.toml
overrides/: app.py  realtime_model_inference_from_file.py  text_processing.py  vibevoice_realtime_demo.py
scripts/: batch_generate_demos.py  bootstrap_uv.sh  run_realtime_demo.py
